public/styles.css
* {
  font-family: "Basis Grotesque", "Helvetica", sans-serif;
  color: #0f1433;
  font-size: 18px;
  line-height: 150%;
}

body {
  width: 100%;
  height: 100%;
  background-color: #fff;
  overflow-y: hidden;
  overflow-x: hidden;
}

a,
a:visited {
  color: #0f1433;
  text-decoration: none;
  transition: 0.5s;
  /* border-bottom: 1px solid #0f1433; */
}

a:hover {
  cursor: crosshair;
  color: #ff4724;
  /* border-bottom: 1px solid #ff4724; */
}

h1 {
  font-size: 42px;
  font-weight: normal;
  color: #0f1433;
  font-family: "Tiempos Fine", "Playfair Display", serif;
}

#title > a,
#title > a:visited {
  font-family: "Tiempos Fine", "Playfair Display", serif;
  font-size: 42px;
  font-weight: normal;
  color: #ff4724;
}

#title > a:hover {
  background-color: transparent;
  font-style: italic;
}

h2,
h2 > span,
.label {
  color: #0f1433;
  font-family: "Tiempos Fine", "Playfair Display", serif;
  font-weight: normal;
  font-size: 32px;
  line-height: 140%;
}

.label {
  padding: 0 50px 0 0;
  margin: 0;
  width: 200px;
  display: block;
}

.nav,
h3,
h3 > a {
  font-family: "Roboto Mono", monospace;
  color: #ff4724;
  font-weight: normal;
  text-transform: uppercase;
  font-size: 16px;
  line-height: 180%;
}

.greenCircle {
  width: 40vw;
  height: 40vw;
  background-color: #e5ef53;
  position: absolute;
  bottom: 0;
  left: 0;
  border-radius: 50%;
  z-index: -1;
  opacity: 0.5;
  filter: blur(200px);
}

.lavCircle {
  width: 50vw;
  height: 50vw;
  background-color: #e0deff;
  position: absolute;
  border-radius: 50%;
  top: 0;
  right: 0;
  z-index: -1;
  filter: blur(200px);
}

/* @keyframes greenCircle {
  0% {
    left: 50%;
    top: 100%;
  }
  25% {
    left: 75%;
    top: 50%;
  }
  50% {
    left: 50%;
    top: 0%;
  }
  75% {
    left: 0%;
    top: 100%;
  }
  100% {
    left: 0%;
    top: 0%;
  }
} */

/* @keyframes lavCircle {
  0% {
    left: 0%;
    top: 0%;
  }
  25% {
    left: 25%;
    top: 12%;
  }
  50% {
    left: 50%;
    top: 44%;
  }
  75% {
    left: 75%;
    top: 25%;
  }
  100% {
    left: 18%;
    top: 100%;
  }
} */

/* Projects */
.projectTitle {
  font-size: 60px;
  text-transform: uppercase;
  font-style: italic;
  transition: 0.5s;
  padding: 0 25px 0 0;
}

.project {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 10px 0 10px 0;
  margin: 15px 0 15px 0;
  transition: 0.5s;
}

.project:hover > h2,
.project:hover > h3 {
  color: #e5ef53;
}

.heroImg {
  width: 50%;
  height: 50%;
}

.heroProj {
  display: flex;
  align-items: center;
  flex-direction: row;
  text-align: left;
}

.techIcon {
  width: 50px;
  height: 50px;
  padding: 0 10px 0 0;
}

.projList {
  display: block;
}

/* Mobile Optimization */
@media screen and (max-width: 768px) {
  #root {
    float: none;
    width: auto;
    margin: 0;
    overflow: hidden;
  }
  body {
    width: 100%;
    height: 95%;
    background-color: #fff;
    overflow-x: hidden;
    overflow-y: hidden;
  }
  *,
  a,
  a:link,
  a:active,
  a:hover,
  a:visited {
    font-size: 14px;
  }
  #title > a,
  #title > a:visited,
  #title > a:hover {
    font-size: 21px;
  }
  h2,
  h2 > span,
  .label {
    font-size: 21px;
  }
  h3 {
    font-size: 14px;
  }
  .heroImg {
    width: 75%;
    height: 75%;
  }
  .heroProj {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    justify-content: center;
    text-align: center;
  }
}

